# tools-app-base

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: config.py  main.py
src/app/api/v1/: health.py
src/app/static/apps/home/: index.html
src/app/static/apps/source-to-final/: index.html
src/app/static/shared/css/: base.css
src/app/static/shared/js/: api.js
tests/: test_api.py
